--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="container">
 
                 <div class="logo pull-left">
-                    <h1><a href="index.html">OlaConcept</a></h1>
+                    <h1><a href="index.html">Ayelotaticoncept</a></h1>
                 </div>
 
                 <nav id="nav-menu-container">
@@ -278,7 +278,36 @@
                             </figure>
                         </div>
                     </div>
-
+                    <div class="col-lg-4 col-md-6 portfolio-item web-dev">
+                        <div class="portfolio-wrap">
+                            <figure>
+                                <img src="img/eco energy.jpg" class="img-fluid" alt="Eco Energy">
+                                <a href="img/eco energy.jpg" class="link-preview" data-lightbox="portfolio" data-title="Eco Energy" title="Preview"><i class="fa fa-eye"></i></a>
+                                <a href="#" class="link-details" title="More Details"><i class="fa fa-link"></i></a>
+                                <h4 class="portfolio-title">Eco Energy<span> Graphics Designer</span></h4>
+                            </figure>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item web-dev">
+                        <div class="portfolio-wrap">
+                            <figure>
+                                <img src="img/essam store.jpg" class="img-fluid" alt="Essam Store">
+                                <a href="img/essam store.jpg" class="link-preview" data-lightbox="portfolio" data-title="Essam Store" title="Preview"><i class="fa fa-eye"></i></a>
+                                <a href="#" class="link-details" title="More Details"><i class="fa fa-link"></i></a>
+                                <h4 class="portfolio-title">Essam Store<span> Graphics Designer</span></h4>
+                            </figure>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item web-dev">
+                        <div class="portfolio-wrap">
+                            <figure>
+                                <img src="img/new residence.jpg" class="img-fluid" alt="New Residence">
+                                <a href="img/new residence.jpg" class="link-preview" data-lightbox="portfolio" data-title="New Residence" title="Preview"><i class="fa fa-eye"></i></a>
+                                <a href="#" class="link-details" title="More Details"><i class="fa fa-link"></i></a>
+                                <h4 class="portfolio-title">New Residence<span> Graphics Designer</span></h4>
+                            </figure>
+                        </div>
+                    </div>
                     <div class="col-lg-4 col-md-6 portfolio-item web-dev">
                         <div class="portfolio-wrap">
                             <figure>
