--- a/index.html
+++ b/index.html
@@ -390,8 +390,7 @@
                         <img src="img/testimonial-1.jpg" class="testimonial-img" alt="">
                         <h3>Abigail Shaw</h3>
                         <h4>Greenhouse worker</h4>
-                        <p>
-                            Duis elementum consequat feugiat. In hac habitasse platea dictumst. Pellentesque habitant morbi tristique senectus malesuada fames turpis egestas. 
+                        <p>Ayelotaticoncept's expertise and dedication transformed our project, delivering outstanding results with precision and creativity—truly a pleasure to work with.
                         </p>
                     </div>
 
@@ -399,8 +398,7 @@
                         <img src="img/testimonial-2.jpg" class="testimonial-img" alt="">
                         <h3>Jake Gregory</h3>
                         <h4>News correspondent</h4>
-                        <p>
-                            Curabitur bibendum euismod augue, eu rutrum metus consectetur id. Duis lacus erat, gravida laoreet molestie eget, congue in erat.
+                        <p>Ayelotaticoncept consistently exceeded our expectations, providing innovative solutions and exceptional service that elevated our project to new heights.
                         </p>
                     </div>
 
@@ -408,8 +406,7 @@
                         <img src="img/testimonial-3.jpg" class="testimonial-img" alt="">
                         <h3>Maddison Hughes</h3>
                         <h4>Social worker</h4>
-                        <p>
-                            Nulla at luctus ligula. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis enim quam, interdum nec turpis at, volutpat ultricies ligula.
+                        <p>He's professionalism and skill made a significant impact on our project, delivering results that were both timely and top-notch.
                         </p>
                     </div>
                 </div>
