--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta content="This is my personal portfolio - Taofeeq-Ayelotiti" name="description">
 
         <!-- Favicon -->
-        <link href="img/taofeeq.jpg" rel="icon">
+        <link href="img/aye.png" rel="icon">
 
         <!-- Google Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400|Solway:400,700&display=swap" rel="stylesheet"> 
@@ -24,6 +24,7 @@
     </head>
 
     <body>
+        <!-- Header Start -->
         <div class="top-header" id="top-header">
             <div class="container text-center">
                 <div class="row">
@@ -42,11 +43,15 @@
                 </div>
             </div>
         </div>
+        <!-- Header End -->
+
+        <!-- Nav Start -->
         <div class="header">
             <div class="container">
 
                 <div class="logo pull-left">
-                    <h1><a href="index.html">Ayelotaticoncept</a></h1>
+                    <img class="olacon" src="/img/aye.png" alt="OlaConcept" srcset="/img/aye.png">
+                    <h1><a href="#">OlaConcept</a></h1>
                 </div>
 
                 <nav id="nav-menu-container">
@@ -64,6 +69,9 @@
                 </nav>
             </div>
         </div>
+        <!-- Nav End -->
+
+        <!-- About Me Start-->
         <div class="about" id="about">
             <div class="container">
                 <div class="row align-items-center">
@@ -135,6 +143,9 @@
                 </div>
             </div>
         </div>
+        <!-- About Me End-->
+        
+        <!-- Job Experience Start -->
         <div class="experience" id="experience">
             <div class="container">
                 <header class="section-header">
@@ -166,6 +177,9 @@
                 </div>
             </div>
         </div>
+        <!-- Job Experience End -->
+
+        <!-- Services Start -->
         <div class="services" id="services">
             <div class="container">
                 <header class="section-header">
@@ -194,45 +208,51 @@
                 </div>
             </div>
         </div>
+        <!-- Services End -->
+
+        <!-- Counter Start -->
         <div class="counters">
             <div class="container">
                 <div class="row">
                     <div class="col-md-3 col-sm-6">
                         <div class="counter">
                             <div class="counter-icon-box"><i class="fa fa-calendar"></i></div>
-                            <div class="number animateNumber" data-toggle="counter-up"> <span>10</span></div>
+                            <div class="number animateNumber" data-toggle="counter-up"> <span>5</span></div>
                             <h4 class="font-weight">Years of Experience</h4>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
                         <div class="counter">
                             <div class="counter-icon-box"><i class="fa fa-check"></i></div>
-                            <div class="number animateNumber" data-toggle="counter-up"> <span>395</span></div>
+                            <div class="number animateNumber" data-toggle="counter-up"> <span>198</span></div>
                             <h4 class="font-weight">Completed Projects</h4>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
                         <div class="counter">
                             <div class="counter-icon-box"><i class="fa fa-users"></i></div>
-                            <div class="number animateNumber" data-toggle="counter-up"> <span>225</span></div>
+                            <div class="number animateNumber" data-toggle="counter-up"> <span>200</span></div>
                             <h4 class="font-weight">Total Clients</h4>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
                         <div class="counter">
                             <div class="counter-icon-box"><i class="fa fa-heart"></i></div>
-                            <div class="number animateNumber" data-toggle="counter-up"> <span>9</span></div>
+                            <div class="number animateNumber" data-toggle="counter-up"> <span>5</span></div>
                             <h4 class="font-weight">Award Won</h4>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <!-- Counter End -->
+
+        <!-- Portfolio Start -->
         <div class="portfolio" id="portfolio">
             <div class="container">
                 <header class="section-header">
                     <h3 class="section-title">My Portfolio</h3>
-                    <p>some of my work done for the past 3 Years</p>
+                    <p>some of my work done for the past 5 Years</p>
                 </header>
 
                 <div class="row">
@@ -278,36 +298,7 @@
                             </figure>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 portfolio-item web-dev">
-                        <div class="portfolio-wrap">
-                            <figure>
-                                <img src="img/eco energy.jpg" class="img-fluid" alt="Eco Energy">
-                                <a href="img/eco energy.jpg" class="link-preview" data-lightbox="portfolio" data-title="Eco Energy" title="Preview"><i class="fa fa-eye"></i></a>
-                                <a href="#" class="link-details" title="More Details"><i class="fa fa-link"></i></a>
-                                <h4 class="portfolio-title">Eco Energy<span> Graphics Designer</span></h4>
-                            </figure>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 portfolio-item web-dev">
-                        <div class="portfolio-wrap">
-                            <figure>
-                                <img src="img/essam store.jpg" class="img-fluid" alt="Essam Store">
-                                <a href="img/essam store.jpg" class="link-preview" data-lightbox="portfolio" data-title="Essam Store" title="Preview"><i class="fa fa-eye"></i></a>
-                                <a href="#" class="link-details" title="More Details"><i class="fa fa-link"></i></a>
-                                <h4 class="portfolio-title">Essam Store<span> Graphics Designer</span></h4>
-                            </figure>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 portfolio-item web-dev">
-                        <div class="portfolio-wrap">
-                            <figure>
-                                <img src="img/new residence.jpg" class="img-fluid" alt="New Residence">
-                                <a href="img/new residence.jpg" class="link-preview" data-lightbox="portfolio" data-title="New Residence" title="Preview"><i class="fa fa-eye"></i></a>
-                                <a href="#" class="link-details" title="More Details"><i class="fa fa-link"></i></a>
-                                <h4 class="portfolio-title">New Residence<span> Graphics Designer</span></h4>
-                            </figure>
-                        </div>
-                    </div>
+
                     <div class="col-lg-4 col-md-6 portfolio-item web-dev">
                         <div class="portfolio-wrap">
                             <figure>
@@ -382,6 +373,9 @@
                 </div>
             </div>
         </div>
+        <!-- Portfolio End -->
+
+        <!-- Testimonials Start -->
         <div class="testimonials" id="testimonials">
             <div class="container">
                 <i class="fa fa-4x fa-quote-left"></i>
@@ -390,7 +384,8 @@
                         <img src="img/testimonial-1.jpg" class="testimonial-img" alt="">
                         <h3>Abigail Shaw</h3>
                         <h4>Greenhouse worker</h4>
-                        <p>Ayelotaticoncept's expertise and dedication transformed our project, delivering outstanding results with precision and creativity—truly a pleasure to work with.
+                        <p>
+                            Duis elementum consequat feugiat. In hac habitasse platea dictumst. Pellentesque habitant morbi tristique senectus malesuada fames turpis egestas. 
                         </p>
                     </div>
 
@@ -398,7 +393,8 @@
                         <img src="img/testimonial-2.jpg" class="testimonial-img" alt="">
                         <h3>Jake Gregory</h3>
                         <h4>News correspondent</h4>
-                        <p>Ayelotaticoncept consistently exceeded our expectations, providing innovative solutions and exceptional service that elevated our project to new heights.
+                        <p>
+                            Curabitur bibendum euismod augue, eu rutrum metus consectetur id. Duis lacus erat, gravida laoreet molestie eget, congue in erat.
                         </p>
                     </div>
 
@@ -406,12 +402,16 @@
                         <img src="img/testimonial-3.jpg" class="testimonial-img" alt="">
                         <h3>Maddison Hughes</h3>
                         <h4>Social worker</h4>
-                        <p>He's professionalism and skill made a significant impact on our project, delivering results that were both timely and top-notch.
+                        <p>
+                            Nulla at luctus ligula. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis enim quam, interdum nec turpis at, volutpat ultricies ligula.
                         </p>
                     </div>
                 </div>
             </div>
         </div>
+        <!-- Testimonials End -->
+
+        <!-- Contact Start -->
         <div class="contact" id="contact">
             <div class="container">
                 <div class="section-header">
@@ -424,7 +424,7 @@
                     <div class="col-md-6">
                         <div class="contact-info">
                             <p><i class="fa fa-user"></i>Taofeeq Ayelotiti</p>
-                            <p><i class="fa fa-tag"></i>Web Designer</p>
+                            <p><i class="fa fa-tag"></i>Web/Graphics Designer</p>
                             <p><i class="fa fa-map-marker"></i>123 Soft Street, Los Angeles, CA, USA</p>
                             <p><i class="fa fa-envelope"></i><a href="mailto:one@ayelotaticoncept.com.ng">one@ayelotaticoncept.com.ng</a></p>
                             <p><i class="fa fa-phone"></i><a href="tel:+234 810 865 3778">+234 810 865 3778</a></p>
@@ -461,15 +461,22 @@
                 </div>
             </div>
         </div>
+        <!-- Contact End -->
+
+        <!-- Footer Start -->
         <div class="footer">
             <div class="container">
                 <div class="copyright">
-                    <p>&copy; Copyright <a class="deve" href="tel:2349060292183">Forloop Technology Company</a>. All Rights Reserved</p>
+                    <p>&copy; Copyright <a class="deve" href="mailto:forlooptechcompany@gmail.com">Forloop Technology Company</a>. All Rights Reserved</p>
                 </div>
             </div>
         </div>
+        <!-- Footer end -->
+        
+        <!-- Back to Top -->
         <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
+        <!-- JavaScript Libraries -->
         <script src="/lib/jquery/jquery-3.4.1.min.js"></script>
         <script src="/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
         <script src="lib/typed/typed.min.js"></script>
@@ -482,6 +489,8 @@
         <script src="lib/owlcarousel/owl.carousel.min.js"></script>
         <script src="lib/isotope/isotope.pkgd.min.js"></script>
         <script src="lib/lightbox/js/lightbox.min.js"></script>
+
+        <!-- Template Javascript -->
         <script src="js/main.js"></script>
     </body>
 </html>
